# oboe_album_rag_project

./: .gitignore  README.md  pyproject.toml  ~$오보에 최종프로젝트 발표.pptx  오보에 최종프로젝트 발표.pptx
backend/: app.py  chatbot.py  graph.py  requirements.txt
backend2/: langgraph.json  pyproject.toml  requirements.txt
backend2/app/: graph.py
backend2/chroma_store/: chroma.sqlite3
backend3/: langgraph.json  requirements.txt  server.py
backend3/my_agent/: agent.py
backend3/my_agent/utils/: nodes.py  state.py  tools.py
backend3/templates/: index1.html
backend4/: langgraph.json  pyproject.toml  server.py
frontend/: index.html  index1.html
review/: index2.html
